--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "lucide-react": "^0.544.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.24.1",
+    "react-router-dom": "6.22",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
